--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio | Bhavitha</title>
+    <link rel="icon" href="assets/favicon.ico" type="image" sizes="16x16">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,500,900|Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <!-- JUST A HELLO WORLD TEST AS AN INITIAL COMMIT, TO SEE IF THE GITHUB PAGE IS WORKING -->
-    <h1>Hello, World!</h1>
+    <h1>Hi, this is <span class="name">Bhavitha</span></h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consectetur accusantium quia aspernatur facilis sapiente expedita iste at, facere suscipit laborum ipsam odio est quod laboriosam, blanditiis quis praesentium iure.</p>
 </body>
 </html>
